--- a/Resources/css/Categorize.css
+++ b/Resources/css/Categorize.css
@@ -121,7 +121,7 @@ border : #000 none 5px;
 }
 .instructionsButton {
 background-image : url("../images/sequence/instructions_button0001.png");
-background-repeat:none;
+background-repeat:no-repeat;
 background-color : #666;
 border-top-style : none;
 border-right-style : none;
@@ -134,7 +134,7 @@ padding-right : 20px;
 }
 .muteButton {
 background-image : url("../images/sequence/sound_button0002.png");
-background-repeat:none;
+background-repeat:no-repeat;
 background-color : #666;
 border-top-style : none;
 border-right-style : none;
@@ -146,7 +146,7 @@ padding-right : 20px;
 }
 .playButton {
 background-image : url("../images/sequence/play_button0001.png");
-background-repeat:none;
+background-repeat:no-repeat;
 background-color : #666;
 border-top-style : none;
 border-right-style : none;
@@ -159,7 +159,7 @@ padding-right : 20px;
 }
 .pauseButton {
 background-image : url("../images/sequence/pause_button0001.png");
-background-repeat:none;
+background-repeat:no-repeat;
 background-color : #666;
 border-top-style : none;
 border-right-style : none;
